# quant-test

./: .gitignore  Cargo.toml  README.md
resource/: 601012.SH.Tick.csv  说明.xlsx  题目.txt
src/: main.rs  raw_data.rs  strategy.rs  tick.rs  transaction.rs  utils.rs
