[package]
name = "quant-test"
version = "0.1.0"
authors = ["gyllone <gyl19930522@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
rayon = "1.5.1"